--- a/README
+++ b/README
@@ -7,6 +7,7 @@ Usage:
 
 Commands:
     list                List installed packages
+    install             Install a package
 
 Options:
     -h, --help          Display this message
