--- a/README
+++ b/README
@@ -8,6 +8,7 @@ Usage:
 Commands:
     list                List installed packages
     install             Install a package
+    delete              Delete a package
 
 Options:
     -h, --help          Display this message
