--- a/README
+++ b/README
@@ -17,3 +17,5 @@ Commands:
 Options:
     -h, --help          Display this message
     -v, --version       Print version info and exit
+
+WARNING: Tested with only Emacs 24.5 and 25.2 (trunk)
